# KR5

./: README.md  config.py  main.py  pyproject.toml  random_tests.py
data/: Avito_vacancies.json  VK_vacancies.json  X5_Group_vacancies.json  companies.json  Газпромбанк_vacancies.json  Яндекс_vacancies.json
src/: dbmanager.py  utils.py
