[tool.poetry]
name = "kr5"
version = "0.1.0"
description = ""
authors = ["Бородин Дмитрий"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
tqdm = "^4.66.4"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
